--- a/notebooks/jenga_example.ipynb
+++ b/notebooks/jenga_example.ipynb
@@ -13,9 +13,9 @@
    },
    "outputs": [],
    "source": [
-    "from src.jenga.corruptions import text\n",
+    "from jenga.corruptions import text\n",
     "import pandas as pd\n",
-    "from src.corruptions import duckdb as cdb "
+    "from corruptions import duckdb as cdb "
    ]
   },
   {
@@ -268,7 +268,7 @@
     }
    ],
    "source": [
-    "data = pd.read_json(\"./../data/small.json\", lines=True)\n",
+    "data = pd.read_json(\"./../data/small.json.gz\", compression=\"gzip\", lines=True)\n",
     "data"
    ]
   },
@@ -846,12 +846,13 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [],
+   "execution_count": null,
+   "id": "766ecac0cbb78401",
    "metadata": {
     "collapsed": false
    },
-   "id": "766ecac0cbb78401"
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -870,7 +871,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
