--- a/notebooks/duckdb_example.ipynb
+++ b/notebooks/duckdb_example.ipynb
@@ -270,7 +270,7 @@
     }
    ],
    "source": [
-    "df = pd.read_json(\"./data/small.json\", lines=True)\n",
+    "df = pd.read_json(\"./data/small.json.gz\", compression=\"gzip\", lines=True)\n",
     "df"
    ]
   },
@@ -538,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
