--- a/notebooks/duckdb_example.ipynb
+++ b/notebooks/duckdb_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -11,20 +11,12 @@
     },
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
-    "print(os.getcwd())\n",
-    "from jenga.corruptions import DuckDBCorruptionBrokenCharacters"
+    "from jenga.corruptions import DuckDBCorruptionBrokenCharacters\n",
+    "import duckdb"
    ]
   },
   {
@@ -270,13 +262,13 @@
     }
    ],
    "source": [
-    "df = pd.read_json(\"./data/small.json.gz\", compression=\"gzip\", lines=True)\n",
+    "df = pd.read_json(\"./data/small.json\", lines=True)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6258064fc600242e",
    "metadata": {
     "ExecuteTime": {
@@ -285,7 +277,24 @@
     },
     "collapsed": false
    },
+   "outputs": [],
+   "source": [
+    "duckdb_corruption = DuckDBCorruptionBrokenCharacters(\"reviewText\", 0.2)\n",
+    "duckdb_corruption.transform(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-_*@\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -307,218 +316,183 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>overall</th>\n",
-       "      <th>verified</th>\n",
-       "      <th>reviewTime</th>\n",
-       "      <th>reviewerID</th>\n",
-       "      <th>asin</th>\n",
-       "      <th>reviewerName</th>\n",
        "      <th>reviewText</th>\n",
-       "      <th>summary</th>\n",
-       "      <th>unixReviewTime</th>\n",
-       "      <th>vote</th>\n",
+       "      <th>oldText</th>\n",
+       "      <th>selected_word</th>\n",
+       "      <th>asin</th>\n",
+       "      <th>asin_1</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>01 11, 2018</td>\n",
-       "      <td>A3VG446SHJH37O</td>\n",
-       "      <td>9742356831</td>\n",
-       "      <td>PLee</td>\n",
-       "      <td>Absolutely LOVE this!!! It's spicy but sooooo ...</td>\n",
-       "      <td>LOVE!</td>\n",
-       "      <td>1515628800</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>adverse comment.</td>\n",
+       "      <td>No adverse comment.</td>\n",
+       "      <td>No</td>\n",
+       "      <td>4639725183</td>\n",
+       "      <td>4639725183</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>07 13, 2016</td>\n",
-       "      <td>A3LXB49N4XLHUC</td>\n",
-       "      <td>9742356831</td>\n",
-       "      <td>Cosala Salaci</td>\n",
-       "      <td>Best green curry paste. A little goes a long w...</td>\n",
-       "      <td>Delicious</td>\n",
-       "      <td>1468368000</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Gift  college student.</td>\n",
+       "      <td>Gift for college student.</td>\n",
+       "      <td>for</td>\n",
+       "      <td>4639725183</td>\n",
+       "      <td>4639725183</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>11 22, 2014</td>\n",
-       "      <td>ARW3VESFEOKOA</td>\n",
-       "      <td>9742356831</td>\n",
-       "      <td>Cherie</td>\n",
-       "      <td>Best there is for green curry.</td>\n",
-       "      <td>Five Stars</td>\n",
-       "      <td>1416614400</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>If you like strong tea, this is for you.  migh...</td>\n",
+       "      <td>If you like strong tea, this is for you. It mi...</td>\n",
+       "      <td>It</td>\n",
+       "      <td>4639725183</td>\n",
+       "      <td>4639725183</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>09 5, 2016</td>\n",
-       "      <td>A36AKNBXEYHNNS</td>\n",
-       "      <td>9742356831</td>\n",
-       "      <td>TBT</td>\n",
-       "      <td>By fár thé bést pástéd I'vé úséd, évén béttér ...</td>\n",
-       "      <td>By far the best pasted I've used</td>\n",
-       "      <td>1473033600</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Love the . The flavor is way better than the r...</td>\n",
+       "      <td>Love the tea. The flavor is way better than th...</td>\n",
+       "      <td>tea</td>\n",
+       "      <td>4639725183</td>\n",
+       "      <td>4639725183</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>08 28, 2016</td>\n",
-       "      <td>A32TZ4HWVHBYX7</td>\n",
-       "      <td>4639725043</td>\n",
-       "      <td>cowgirl</td>\n",
-       "      <td>Bést téá fớr my singlé cúp cớfféé mákér. I púr...</td>\n",
-       "      <td>Best tea for my single cup coffee maker</td>\n",
-       "      <td>1472342400</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>I have searched everywhere until I browsed Ama...</td>\n",
+       "      <td>I have searched everywhere until I browsed Ama...</td>\n",
+       "      <td>awful</td>\n",
+       "      <td>4639725183</td>\n",
+       "      <td>4639725183</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>Tea made  Lipton Yellow Label teabags is much ...</td>\n",
+       "      <td>Tea made with Lipton Yellow Label teabags is m...</td>\n",
+       "      <td>with</td>\n",
+       "      <td>4639725183</td>\n",
+       "      <td>4639725183</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>08 30, 2017</td>\n",
-       "      <td>A16Q398S571Y58</td>\n",
-       "      <td>9742356831</td>\n",
-       "      <td>SSS</td>\n",
-       "      <td>tastes authentic</td>\n",
-       "      <td>Five Stars</td>\n",
-       "      <td>1504051200</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>6</th>\n",
+       "      <td>I love  tea!  Okay, I'm not a high falutin' te...</td>\n",
+       "      <td>I love this tea!  Okay, I'm not a high falutin...</td>\n",
+       "      <td>this</td>\n",
+       "      <td>4639725183</td>\n",
+       "      <td>4639725183</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>113</th>\n",
-       "      <td>5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>05 5, 2014</td>\n",
-       "      <td>A1T65DGV69QI8L</td>\n",
-       "      <td>4639725043</td>\n",
-       "      <td>flying squirrel girl</td>\n",
-       "      <td>this tea is the bomb, for the real die-hard in...</td>\n",
-       "      <td>the bomb</td>\n",
-       "      <td>1399248000</td>\n",
-       "      <td>5.0</td>\n",
+       "      <th>7</th>\n",
+       "      <td>Discovered this tea at a local Med. Rest....a ...</td>\n",
+       "      <td>Discovered this tea at a local Med. Rest....a ...</td>\n",
+       "      <td>for</td>\n",
+       "      <td>4639725183</td>\n",
+       "      <td>4639725183</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>09 22, 2014</td>\n",
-       "      <td>A4EWRIA8CCRMQ</td>\n",
-       "      <td>9742356831</td>\n",
-       "      <td>Ann</td>\n",
-       "      <td>yum</td>\n",
-       "      <td>Five Stars</td>\n",
-       "      <td>1411344000</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>8</th>\n",
+       "      <td>Well I bought this tea  being in Malaysia for ...</td>\n",
+       "      <td>Well I bought this tea after being in Malaysia...</td>\n",
+       "      <td>after</td>\n",
+       "      <td>4639725183</td>\n",
+       "      <td>4639725183</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>06 20, 2017</td>\n",
-       "      <td>A17FA8KTT1W2EL</td>\n",
-       "      <td>9742356831</td>\n",
-       "      <td>MafiaMom</td>\n",
-       "      <td>Áctúálly véry déliciớús, éspéciálly with méát ...</td>\n",
-       "      <td>Delicious!</td>\n",
-       "      <td>1497916800</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>08 22, 2015</td>\n",
-       "      <td>A1A5GOE5E7BL9S</td>\n",
-       "      <td>4639725043</td>\n",
-       "      <td>Gerald D. Schrag</td>\n",
-       "      <td>Éxcéllént prớdúct, pricé, shipping.</td>\n",
-       "      <td>Excellent product</td>\n",
-       "      <td>1440201600</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>9</th>\n",
+       "      <td>We really like this tea.  It is definitely dif...</td>\n",
+       "      <td>We really like this tea.  It is definitely dif...</td>\n",
+       "      <td>regular</td>\n",
+       "      <td>4639725183</td>\n",
+       "      <td>4639725183</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>117 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     overall  verified   reviewTime      reviewerID        asin  \\\n",
-       "0          5      True  01 11, 2018  A3VG446SHJH37O  9742356831   \n",
-       "1          5      True  07 13, 2016  A3LXB49N4XLHUC  9742356831   \n",
-       "2          5      True  11 22, 2014   ARW3VESFEOKOA  9742356831   \n",
-       "3          5      True   09 5, 2016  A36AKNBXEYHNNS  9742356831   \n",
-       "4          5      True  08 28, 2016  A32TZ4HWVHBYX7  4639725043   \n",
-       "..       ...       ...          ...             ...         ...   \n",
-       "112        5      True  08 30, 2017  A16Q398S571Y58  9742356831   \n",
-       "113        5      True   05 5, 2014  A1T65DGV69QI8L  4639725043   \n",
-       "114        5      True  09 22, 2014   A4EWRIA8CCRMQ  9742356831   \n",
-       "115        5      True  06 20, 2017  A17FA8KTT1W2EL  9742356831   \n",
-       "116        5      True  08 22, 2015  A1A5GOE5E7BL9S  4639725043   \n",
+       "                                          reviewText  \\\n",
+       "0                                   adverse comment.   \n",
+       "1                             Gift  college student.   \n",
+       "2  If you like strong tea, this is for you.  migh...   \n",
+       "3  Love the . The flavor is way better than the r...   \n",
+       "4  I have searched everywhere until I browsed Ama...   \n",
+       "5  Tea made  Lipton Yellow Label teabags is much ...   \n",
+       "6  I love  tea!  Okay, I'm not a high falutin' te...   \n",
+       "7  Discovered this tea at a local Med. Rest....a ...   \n",
+       "8  Well I bought this tea  being in Malaysia for ...   \n",
+       "9  We really like this tea.  It is definitely dif...   \n",
        "\n",
-       "             reviewerName                                         reviewText  \\\n",
-       "0                    PLee  Absolutely LOVE this!!! It's spicy but sooooo ...   \n",
-       "1           Cosala Salaci  Best green curry paste. A little goes a long w...   \n",
-       "2                  Cherie                     Best there is for green curry.   \n",
-       "3                     TBT  By fár thé bést pástéd I'vé úséd, évén béttér ...   \n",
-       "4                 cowgirl  Bést téá fớr my singlé cúp cớfféé mákér. I púr...   \n",
-       "..                    ...                                                ...   \n",
-       "112                   SSS                                   tastes authentic   \n",
-       "113  flying squirrel girl  this tea is the bomb, for the real die-hard in...   \n",
-       "114                   Ann                                                yum   \n",
-       "115              MafiaMom  Áctúálly véry déliciớús, éspéciálly with méát ...   \n",
-       "116      Gerald D. Schrag                Éxcéllént prớdúct, pricé, shipping.   \n",
+       "                                             oldText selected_word  \\\n",
+       "0                                No adverse comment.            No   \n",
+       "1                          Gift for college student.           for   \n",
+       "2  If you like strong tea, this is for you. It mi...            It   \n",
+       "3  Love the tea. The flavor is way better than th...           tea   \n",
+       "4  I have searched everywhere until I browsed Ama...         awful   \n",
+       "5  Tea made with Lipton Yellow Label teabags is m...          with   \n",
+       "6  I love this tea!  Okay, I'm not a high falutin...          this   \n",
+       "7  Discovered this tea at a local Med. Rest....a ...           for   \n",
+       "8  Well I bought this tea after being in Malaysia...         after   \n",
+       "9  We really like this tea.  It is definitely dif...       regular   \n",
        "\n",
-       "                                     summary  unixReviewTime  vote  \n",
-       "0                                      LOVE!      1515628800   NaN  \n",
-       "1                                  Delicious      1468368000   NaN  \n",
-       "2                                 Five Stars      1416614400   NaN  \n",
-       "3           By far the best pasted I've used      1473033600   NaN  \n",
-       "4    Best tea for my single cup coffee maker      1472342400   NaN  \n",
-       "..                                       ...             ...   ...  \n",
-       "112                               Five Stars      1504051200   NaN  \n",
-       "113                                 the bomb      1399248000   5.0  \n",
-       "114                               Five Stars      1411344000   NaN  \n",
-       "115                               Delicious!      1497916800   NaN  \n",
-       "116                        Excellent product      1440201600   NaN  \n",
-       "\n",
-       "[117 rows x 10 columns]"
+       "         asin      asin_1  \n",
+       "0  4639725183  4639725183  \n",
+       "1  4639725183  4639725183  \n",
+       "2  4639725183  4639725183  \n",
+       "3  4639725183  4639725183  \n",
+       "4  4639725183  4639725183  \n",
+       "5  4639725183  4639725183  \n",
+       "6  4639725183  4639725183  \n",
+       "7  4639725183  4639725183  \n",
+       "8  4639725183  4639725183  \n",
+       "9  4639725183  4639725183  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "duckdb_corruption = DuckDBCorruptionBrokenCharacters(\"reviewText\", 0.2)\n",
-    "duckdb_corruption.transform(df)"
+    "exceptions = \"\"\"-_*@\"\"\"\n",
+    "homos = \"\"\"˗৭Ȣ𝟕бƼᏎƷᒿlO`ɑЬϲԁе𝚏ɡհіϳ𝒌ⅼｍոорԛⲅѕ𝚝սѵԝ×уᴢ\"\"\"\n",
+    "filter_pattern = homos + \"\"\"\\\\-_\\\\*@\"\"\"\n",
+    "filter_pattern = f\"[\\\\w{filter_pattern}]+\"\n",
+    "print(f\"{exceptions}\")\n",
+    "duckdb.sql(f\"\"\"\n",
+    "    WITH \n",
+    "        words AS (\n",
+    "           SELECT \n",
+    "            reviewerId,\n",
+    "            asin,\n",
+    "            flatten(   \n",
+    "                [   \n",
+    "                    regexp_extract_all(\n",
+    "                        ltrim(w, '{exceptions}' ),\n",
+    "                        '{filter_pattern}'\n",
+    "                    )\n",
+    "                    FOR w in \n",
+    "                    regexp_split_to_array(reviewText, ' ') \n",
+    "                ]\n",
+    "            ) as word\n",
+    "            FROM df\n",
+    "        ),\n",
+    "        delete_words AS (\n",
+    "            SELECT \n",
+    "                reviewerId,\n",
+    "                asin,\n",
+    "                word[CAST(floor(len(word) * random()) AS int)] AS selected_word\n",
+    "            FROM words\n",
+    "        )\n",
+    "        \n",
+    "\n",
+    "    SELECT \n",
+    "        regexp_replace(df.reviewText, dw.selected_word, '') AS reviewText, \n",
+    "        df.reviewText as oldText,\n",
+    "        dw.selected_word,\n",
+    "        df.asin, dw.asin    \n",
+    "    FROM delete_words dw\n",
+    "    JOIN df ON df.asin = dw.asin AND df.reviewerId = dw.reviewerId\n",
+    "    LIMIT 10\n",
+    "\"\"\").df()"
    ]
   }
  ],
@@ -538,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
