feat: implemented textattack partly

--- a/analyse/performance_textattack.ipynb
+++ b/analyse/performance_textattack.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jenga.corruptions import DuckDBCorruptionBrokenCharacters, BrokenCharacters\n",
+    "from jenga.corruptions import TextAttackThroughDuckDBCorruption, TextAttackCorruption\n",
+    "from textattack.transformations import WordDeletion\n",
     "import pandas as pd\n",
     "import duckdb\n",
     "import random\n",
@@ -325,20 +326,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "InvalidInputException",
+     "evalue": "Invalid Input Error: Python exception occurred while executing the UDF: KeyboardInterrupt: <EMPTY MESSAGE>\n\nAt:\n  /usr/lib/python3.10/re.py(240): findall\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/textattack/shared/utils/strings.py(53): words_from_text\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/textattack/shared/attacked_text.py(421): generate_new_attacked_text\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/textattack/shared/attacked_text.py(350): replace_words_at_indices\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/textattack/shared/attacked_text.py(359): replace_word_at_index\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/textattack/shared/attacked_text.py(364): delete_word_at_index\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/textattack/transformations/word_deletion.py(22): _get_transformations\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/textattack/transformations/transformation.py(57): __call__\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/textattack/transformations/composite_transformation.py(39): __call__\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/textattack/augmentation/augmenter.py(126): augment\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/jenga/corruptions/textattack.py(91): augment\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/jenga/corruptions/textattack.py(103): transform\n  /tmp/ipykernel_2159793/3386172171.py(13): <module>\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/IPython/core/interactiveshell.py(3577): run_code\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/IPython/core/interactiveshell.py(3517): run_ast_nodes\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/IPython/core/interactiveshell.py(3334): run_cell_async\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/IPython/core/async_helpers.py(129): _pseudo_sync_runner\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/IPython/core/interactiveshell.py(3130): _run_cell\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/IPython/core/interactiveshell.py(3075): run_cell\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/ipykernel/zmqshell.py(549): run_cell\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/ipykernel/ipkernel.py(446): do_execute\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/ipykernel/kernelbase.py(778): execute_request\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/ipykernel/ipkernel.py(359): execute_request\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/ipykernel/kernelbase.py(437): dispatch_shell\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/ipykernel/kernelbase.py(534): process_one\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/ipykernel/kernelbase.py(545): dispatch_queue\n  /usr/lib/python3.10/asyncio/events.py(80): _run\n  /usr/lib/python3.10/asyncio/base_events.py(1909): _run_once\n  /usr/lib/python3.10/asyncio/base_events.py(603): run_forever\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/tornado/platform/asyncio.py(205): start\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/ipykernel/kernelapp.py(739): start\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/traitlets/config/application.py(1075): launch_instance\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/ipykernel_launcher.py(18): <module>\n  /usr/lib/python3.10/runpy.py(86): _run_code\n  /usr/lib/python3.10/runpy.py(196): _run_module_as_main\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mInvalidInputException\u001b[0m                     Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 13\u001b[0m\n\u001b[1;32m      5\u001b[0m duckdb_corruption \u001b[38;5;241m=\u001b[39m TextAttackThroughDuckDBCorruption(\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mreviewText\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;241m0.2\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     10\u001b[0m     ]\n\u001b[1;32m     11\u001b[0m )\n\u001b[1;32m     12\u001b[0m start \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[0;32m---> 13\u001b[0m \u001b[43mduckdb_corruption\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtransform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     14\u001b[0m end \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(end \u001b[38;5;241m-\u001b[39m start)\n",
+      "File \u001b[0;32m~/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/jenga/corruptions/textattack.py:103\u001b[0m, in \u001b[0;36mTextAttackThroughDuckDBCorruption.transform\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21maugment\u001b[39m(w : \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mstr\u001b[39m: \u001b[38;5;28;01mreturn\u001b[39;00m augmenter\u001b[38;5;241m.\u001b[39maugment(w)[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     92\u001b[0m duckdb\u001b[38;5;241m.\u001b[39mcreate_function(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maugment\u001b[39m\u001b[38;5;124m\"\u001b[39m, augment)\n\u001b[1;32m     93\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mduckdb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msql\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     94\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\n\u001b[1;32m     95\u001b[0m \u001b[38;5;124;43m    SELECT \u001b[39;49m\n\u001b[1;32m     96\u001b[0m \u001b[38;5;124;43m        * REPLACE(\u001b[39;49m\n\u001b[1;32m     97\u001b[0m \u001b[38;5;124;43m            CASE WHEN random() < \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfraction\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m THEN augment(\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumn\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m)  ELSE \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumn\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m END AS \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumn\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\n\u001b[1;32m     98\u001b[0m \u001b[38;5;124;43m        )\u001b[39;49m\n\u001b[1;32m     99\u001b[0m \u001b[38;5;124;43m    FROM data\u001b[39;49m\n\u001b[1;32m    100\u001b[0m \u001b[38;5;124;43m    WHERE \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumn\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m IS NOT NULL\u001b[39;49m\n\u001b[1;32m    101\u001b[0m \u001b[38;5;124;43m    ORDER BY \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumn\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\n\u001b[1;32m    102\u001b[0m \u001b[38;5;124;43m    \u001b[39;49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\n\u001b[0;32m--> 103\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_df\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    104\u001b[0m duckdb\u001b[38;5;241m.\u001b[39mremove_function(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maugment\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    105\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m df\n",
+      "\u001b[0;31mInvalidInputException\u001b[0m: Invalid Input Error: Python exception occurred while executing the UDF: KeyboardInterrupt: <EMPTY MESSAGE>\n\nAt:\n  /usr/lib/python3.10/re.py(240): findall\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/textattack/shared/utils/strings.py(53): words_from_text\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/textattack/shared/attacked_text.py(421): generate_new_attacked_text\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/textattack/shared/attacked_text.py(350): replace_words_at_indices\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/textattack/shared/attacked_text.py(359): replace_word_at_index\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/textattack/shared/attacked_text.py(364): delete_word_at_index\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/textattack/transformations/word_deletion.py(22): _get_transformations\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/textattack/transformations/transformation.py(57): __call__\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/textattack/transformations/composite_transformation.py(39): __call__\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/textattack/augmentation/augmenter.py(126): augment\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/jenga/corruptions/textattack.py(91): augment\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/jenga/corruptions/textattack.py(103): transform\n  /tmp/ipykernel_2159793/3386172171.py(13): <module>\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/IPython/core/interactiveshell.py(3577): run_code\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/IPython/core/interactiveshell.py(3517): run_ast_nodes\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/IPython/core/interactiveshell.py(3334): run_cell_async\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/IPython/core/async_helpers.py(129): _pseudo_sync_runner\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/IPython/core/interactiveshell.py(3130): _run_cell\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/IPython/core/interactiveshell.py(3075): run_cell\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/ipykernel/zmqshell.py(549): run_cell\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/ipykernel/ipkernel.py(446): do_execute\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/ipykernel/kernelbase.py(778): execute_request\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/ipykernel/ipkernel.py(359): execute_request\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/ipykernel/kernelbase.py(437): dispatch_shell\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/ipykernel/kernelbase.py(534): process_one\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/ipykernel/kernelbase.py(545): dispatch_queue\n  /usr/lib/python3.10/asyncio/events.py(80): _run\n  /usr/lib/python3.10/asyncio/base_events.py(1909): _run_once\n  /usr/lib/python3.10/asyncio/base_events.py(603): run_forever\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/tornado/platform/asyncio.py(205): start\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/ipykernel/kernelapp.py(739): start\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/traitlets/config/application.py(1075): launch_instance\n  /home/cmol/Documents/University/ComputerScience2023-2024/DataPreperation/DataPreperationProject/venv/lib/python3.10/site-packages/ipykernel_launcher.py(18): <module>\n  /usr/lib/python3.10/runpy.py(86): _run_code\n  /usr/lib/python3.10/runpy.py(196): _run_module_as_main\n"
+     ]
+    }
+   ],
    "source": [
-    "duch_computing_time = []\n",
+    "duck_computing_time = []\n",
     "duckdb.sql(\"SET threads = 1\")\n",
     "for seed in seeds:\n",
     "    duckdb.sql(f\"SELECT setseed({seed})\")\n",
-    "    duckdb_corruption = DuckDBCorruptionBrokenCharacters(\"reviewText\", 0.2)\n",
+    "    duckdb_corruption = TextAttackThroughDuckDBCorruption(\n",
+    "        \"reviewText\",\n",
+    "        0.2,\n",
+    "        transformations=[\n",
+    "            WordDeletion()\n",
+    "        ]\n",
+    "    )\n",
     "    start = time.time()\n",
     "    duckdb_corruption.transform(df)\n",
     "    end = time.time()\n",
-    "    duch_computing_time.append(end - start)\n",
-    "duch_computing_time"
+    "    print(end - start)\n",
+    "    duck_computing_time.append(end - start)\n",
+    "duck_computing_time"
    ]
   },
   {
@@ -348,7 +369,7 @@
    "outputs": [],
    "source": [
     "# This were the results of the experiment\n",
-    "duch_computing_time = [\n",
+    "duck_computing_time = [\n",
     "    56.379162311553955,\n",
     "    45.79448199272156,\n",
     "    53.21978259086609,\n",
@@ -359,45 +380,6 @@
     "    45.97737526893616,\n",
     "    49.353299617767334,\n",
     "    49.73344278335571\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "duckdb_multiple_threads_computing_time = []\n",
-    "duckdb.sql(\"SET threads = 4\")\n",
-    "for seed in seeds:\n",
-    "    duckdb.sql(f\"SELECT setseed({seed})\")\n",
-    "    duckdb_corruption = DuckDBCorruptionBrokenCharacters(\"reviewText\", 0.2)\n",
-    "    start = time.time()\n",
-    "    duckdb_corruption.transform(df)\n",
-    "    end = time.time()\n",
-    "    duckdb_multiple_threads_computing_time.append(end - start)\n",
-    "\n",
-    "duckdb_multiple_threads_computing_time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "duckdb_multiple_threads_computing_time = [\n",
-    "    58.86254072189331,\n",
-    "    47.50891900062561,\n",
-    "    47.77925133705139,\n",
-    "    49.86981225013733,\n",
-    "    45.86521124839783,\n",
-    "    50.89463400840759,\n",
-    "    47.12282633781433,\n",
-    "    50.97922658920288,\n",
-    "    51.78722262382507,\n",
-    "    53.28171372413635\n",
     "]"
    ]
   },
@@ -437,7 +419,7 @@
     "computing_time_jenga = []\n",
     "for seed in seeds:\n",
     "    random.seed(seed)\n",
-    "    duckdb_corruption = BrokenCharacters(\"reviewText\", 0.2)\n",
+    "    duckdb_corruption = TextAttackCorruption(\"reviewText\", 0.2)\n",
     "    start = time.time()\n",
     "    duckdb_corruption.transform(df)\n",
     "    end = time.time()\n",
@@ -644,8 +626,8 @@
     "df_results = pd.DataFrame(columns=[\"type\", \"timespan\"])\n",
     "df_results = pd.concat([\n",
     "    df_results, \n",
-    "    pd.DataFrame([ { \"type\": \"Jenga\", \"timespan\": t} for t in computing_time_jenga]),\n",
-    "    pd.DataFrame([ { \"type\": \"DuckDB\", \"timespan\": t} for t in duch_computing_time]),\n",
+    "    pd.DataFrame([ { \"type\": \"TextAttack Native\", \"timespan\": t} for t in computing_time_jenga]),\n",
+    "    pd.DataFrame([ { \"type\": \"TextAttack DuckDB\", \"timespan\": t} for t in duck_computing_time]),\n",
     "])\n",
     "df_results"
    ]
