--- a/examples/textattack_example.ipynb
+++ b/examples/textattack_example.ipynb
@@ -14,12 +14,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from corruptions import TextAttackCorruption\n",
+    "from jenga.corruptions import TextAttackCorruption, TextAttackThroughDuckDBCorruption\n",
     "\n",
-    "from textattack.transformations import WordSwapRandomCharacterInsertion\n",
-    "from textattack.transformations import WordSwapQWERTY\n",
-    "from textattack.transformations import WordSwapRandomCharacterSubstitution\n",
-    "from textattack.transformations import WordSwapRandomCharacterDeletion\n",
+    "from textattack.transformations import WordSwapRandomCharacterInsertion, WordSwapQWERTY, WordSwapRandomCharacterSubstitution, WordSwapRandomCharacterDeletion, WordDeletion\n",
     "\n",
     "from textattack.constraints.pre_transformation import StopwordModification\n",
     "from textattack.constraints.pre_transformation import RepeatModification"
@@ -59,15 +56,9 @@
     "    column=\"reviewText\",\n",
     "    fraction=0.2,\n",
     "    transformations=[\n",
-    "        WordSwapRandomCharacterDeletion(),\n",
-    "        WordSwapRandomCharacterInsertion(),\n",
-    "        WordSwapRandomCharacterSubstitution(),\n",
-    "        WordSwapQWERTY()\n",
+    "        WordDeletion()\n",
     "    ],\n",
-    "    constraints=[\n",
-    "        RepeatModification(), \n",
-    "        StopwordModification()\n",
-    "    ]\n",
+    "    constraints=[]\n",
     ")\n",
     "\n",
     "text_corruption.transform(df)"
@@ -81,7 +72,17 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "text_corruption = TextAttackThroughDuckDBCorruption(\n",
+    "    column=\"reviewText\",\n",
+    "    fraction=0.2,\n",
+    "    transformations=[\n",
+    "        WordDeletion()\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "text_corruption.transform(df)"
+   ]
   }
  ],
  "metadata": {
